test/bad/functions/type06.px

func f(Int x) def
    return

func f'(Int y: 0) def
    return

f = f'
f()
